# pantheon

./: .gitignore  CONTRIBUTING.md  README.md
.github/scripts/: check_sanitized.py
.github/workflows/: sanitize-check.yml  workflows-e2e.yml
workflows/bioexcel_building_blocks/: README  README.md
workflows/bioexcel_building_blocks/w01-gromacs-md-setup/: README.md  workflow.sanitized.yaml  workflow.yaml
workflows/bioexcel_building_blocks/w01-md-setup/: conda_env.yaml  pyproject.toml  workflow.yaml
workflows/bioexcel_building_blocks/w02-ligand-parameterization/: README.md  conda_env.yaml  pyproject.toml  workflow.yaml
workflows/bioexcel_building_blocks/w03-amber-md-setup/: README.md  biobb_wf_amber_md_setup.py  conda_env.yaml  pyproject.toml  workflow.sanitized.yaml  workflow.yaml
workflows/bioexcel_building_blocks/w03-amber-md-setup/configs/: cpptraj_image.yaml  cpptraj_rgyr.yaml  cpptraj_rms_exp.yaml  cpptraj_rms_first.yaml  leap_solvate.yaml  process_npt.yaml  process_temp.yaml  sander_heat.yaml  sander_n_min.yaml  sander_npt.yaml
workflows/bioexcel_building_blocks/w04-gromacs-protein-ligand-complex-md-setup/: README.md  biobb_wf_protein_complex_md_setup.py  conda_env.yaml  pyproject.toml  workflow.sanitized.yaml  workflow.yaml
workflows/bioexcel_building_blocks/w05-mutation-free-energy-calculations/: README.md  conda_env.yaml  pyproject.toml  ro-crate-metadata.json  ro-crate-preview.html  workflow.yaml
workflows/bioexcel_building_blocks/w06-protein-ligand-docking-cluster90/: README.md  conda_env.yaml  main.py  pyproject.toml  ro-crate-metadata.json  ro-crate-preview.html  workflow.yaml
workflows/bioexcel_building_blocks/w06-protein-ligand-docking-cluster90/configs/: babel_convert_pdb2pdbqt.yaml  babel_convert_pdbqt2pdb.yaml  babel_convert_sdf2pdb.yaml  bindingsite.yaml  ideal_sdf.yaml  pdb_cluster_zip.yaml  str_check_add_hydrogens.yaml
workflows/bioexcel_building_blocks/w07-protein-ligand-docking-pdbe-rest-api/: README.md  conda_env.yaml  environment.yml  pyproject.toml  ro-crate-metadata.json  ro-crate-preview.html  workflow.sanitized.yaml  workflow.yaml
workflows/bioexcel_building_blocks/w08-protein-ligand-docking-fpocket/: README.md  conda_env.yaml  pyproject.toml  ro-crate-metadata.json  ro-crate-preview.html  workflow.sanitized.yaml  workflow.yaml
workflows/bioexcel_building_blocks/w09-amber-protein-md-setup/: README.md  biobb_wf_amber_md_setup.ipynb  (+5 more)
workflows/drug-discovery/w01-boltz2-virtual-screening/: README.md  config.example.yaml  pyproject.toml  run.py  workflow.sanitized.yaml  workflow.yaml
workflows/drug-discovery/w01-boltz2-virtual-screening/containers/: boltz2.Dockerfile
workflows/drug-discovery/w01-boltz2-virtual-screening/examples/: ligands.smi  target.fasta
workflows/drug-discovery/w01-boltz2-virtual-screening/scripts/: prep.py  rank.py
workflows/drug-discovery/w02-autodock-vina-docking/: pyproject.toml  workflow.yaml
workflows/drug-discovery/w02-autodock-vina-docking/scripts/: prep.py  summary.py
workflows/engine-showcases/w01-fanout-map-gather/: README.md  pyproject.toml  workflow.yaml
workflows/engine-showcases/w01-fanout-map-gather/examples/: items.json
workflows/engine-showcases/w01-fanout-map-gather/scripts/: gather_summary.py  split.py
workflows/engine-showcases/w02-programmatic-dynamic-dag/: README.md  pyproject.toml  run.py
workflows/engine-showcases/w02-programmatic-dynamic-dag/examples/: dataset.json
workflows/engine-showcases/w03-loop-map/: README.md  pyproject.toml  workflow.yaml
workflows/engine-showcases/w03-loop-map/scripts/: sum_squares.py
(+417 files in other folders)
