[project]
name = "w03-amber-md-setup"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "horus-environments>=0.1.1",
  "horus-runtime>=0.1.6",
  "horus-ssh",
]

[tool.uv.sources]
horus-runtime = { path = "/Users/cdominguez/Developer/horus-runtime" }
horus-environments = { path = "/Users/cdominguez/Developer/horus-environments" }
horus-ssh = { path = "../../../../horus-ssh" }
